--- a/src/components/model/conceptForm.html
+++ b/src/components/model/conceptForm.html
@@ -1,3 +1,7 @@
+<h4>
+  <span translate ng-if="ctrl.concept.isOfType('conceptSuggestion')">Concept suggestion information</span>
+  <span translate ng-if="!ctrl.concept.isOfType('conceptSuggestion')">Concept information</span>
+</h4>
 
 <div class="row">
   <div class="col-md-12">
